--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -29,9 +29,13 @@
 	}
 }
 
-.portfolio-loop #projects-container,
-.portfolio-archive-layout {
+body:not(.infinite-scroll) .portfolio-loop #projects-container,
+body:not(.infinite-scroll) .portfolio-archive-layout {
 	margin-bottom: 3.5em;
+}
+
+.post-type-archive-jetpack-portfolio #infinite-handle {
+	padding-top: 3.5em;
 }
 
 .portfolio-archive-layout {
