--- a/style.css
+++ b/style.css
@@ -2711,6 +2711,9 @@ body:not(.infinite-scroll) .portfolio-archive-layout {
 .post-type-archive-jetpack-portfolio #infinite-handle {
   padding-top: 3.5em; }
 
+.post-type-archive-jetpack-portfolio .infinite-loader {
+  margin-top: 3.5em; }
+
 .portfolio-archive-layout {
   overflow: auto; }
 
