--- a/style.css
+++ b/style.css
@@ -2609,6 +2609,131 @@ a {
       width: 100%; } }
 
 /*--------------------------------------------------------------
+## Post Loop: Portfolio Template
+--------------------------------------------------------------*/
+.blog-filter-terms {
+  margin-bottom: 25px; }
+  .blog-filter-terms button {
+    border: none;
+    border-bottom: 2px solid #fff;
+    color: #adadad;
+    font-size: 12px;
+    letter-spacing: 1px;
+    padding: 0 0 12px 0;
+    margin-right: 34px; }
+    @media (max-width: 768px) {
+      .blog-filter-terms button {
+        padding: 0 0 5px 0;
+        margin: 0 10px 5px 0; } }
+    .blog-filter-terms button:hover {
+      color: #2d2d2d; }
+    .blog-filter-terms button.active {
+      border-bottom: 2px solid #2d2d2d;
+      color: #2d2d2d; }
+
+#posts-posrtfolio-container {
+  margin-right: -1.1667%;
+  margin-left: -1.1667%; }
+  @media (max-width: 1175px) {
+    body:not(.no-active-sidebar) #posts-posrtfolio-container {
+      margin-right: -0.875%;
+      margin-left: -0.875%; } }
+  @media (max-width: 640px) {
+    body:not(.no-active-sidebar) #posts-posrtfolio-container {
+      margin-right: 0;
+      margin-left: 0; } }
+  @media (max-width: 890px) {
+    .no-active-sidebar #posts-posrtfolio-container {
+      margin-right: -0.875%;
+      margin-left: -0.875%; } }
+  @media (max-width: 640px) {
+    .no-active-sidebar #posts-posrtfolio-container {
+      margin: 0; } }
+
+.archive-post-postfolio {
+  float: left;
+  margin-right: 1.1667%;
+  margin-bottom: 30px;
+  margin-left: 1.1667%;
+  width: 31%; }
+  @media (max-width: 1175px) {
+    body:not(.no-active-sidebar) .archive-post-postfolio {
+      margin-right: 0.875%;
+      margin-left: 0.875%;
+      width: 48.25%; } }
+  @media (max-width: 640px) {
+    body:not(.no-active-sidebar) .archive-post-postfolio {
+      clear: none;
+      display: block;
+      margin-right: 0;
+      width: 100%; } }
+  @media (max-width: 890px) {
+    .no-active-sidebar .archive-post-postfolio {
+      margin-right: 0.875%;
+      margin-left: 0.875%;
+      width: 48.25%; } }
+  @media (max-width: 640px) {
+    .no-active-sidebar .archive-post-postfolio {
+      clear: none;
+      display: block;
+      margin-right: 0;
+      width: 100%; } }
+  .archive-post-postfolio .entry-thumbnail {
+    margin: 0; }
+    .archive-post-postfolio .entry-thumbnail a {
+      display: block;
+      position: relative; }
+  .archive-post-postfolio .entry-overlay {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    transition: .3s;
+    width: 100%;
+    z-index: 0; }
+    .entry-thumbnail:hover .entry-overlay {
+      background-color: rgba(255, 255, 255, 0.9);
+      border: 2px solid #adadad; }
+  .archive-post-postfolio .entry-content {
+    opacity: 0;
+    transition: .3s;
+    visibility: hidden;
+    z-index: 5; }
+    .entry-thumbnail:hover .entry-content {
+      opacity: 1;
+      visibility: visible; }
+  .archive-post-postfolio .entry-title {
+    bottom: 60%;
+    color: #2d2d2d;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    position: absolute;
+    text-align: center;
+    width: 100%; }
+  .archive-post-postfolio .entry-divider {
+    border: solid #2d2d2d 1px;
+    bottom: 55.5%;
+    left: 50%;
+    position: absolute;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 30px; }
+  .archive-post-postfolio .entry-post-category {
+    color: #adadad;
+    font-family: "Lato", sans-serif;
+    font-size: 12px;
+    letter-spacing: 1px;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    top: 47.5%;
+    width: 100%; }
+
+/*--------------------------------------------------------------
 ## Search Results Template
 --------------------------------------------------------------*/
 .search-results article {
