--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -3,41 +3,46 @@
 @import "mixins/bourbon";
 
 /*--------------------------------------------------------------
-# WooCommerce Layout
+# Layout
 --------------------------------------------------------------*/
 @import "woocommerce/layout";
 
 /*--------------------------------------------------------------
-# WooCommerce Buttons
+# Notifications
+--------------------------------------------------------------*/
+@import "woocommerce/notifications";
+
+/*--------------------------------------------------------------
+# Buttons
 --------------------------------------------------------------*/
 @import "woocommerce/buttons";
 
 /*--------------------------------------------------------------
-# WooCommerce Archive
+# Archive
 --------------------------------------------------------------*/
 @import "woocommerce/archive";
 
 /*--------------------------------------------------------------
-# WooCommerce Single Product
+# Single Product
 --------------------------------------------------------------*/
 @import "woocommerce/product";
 
 /*--------------------------------------------------------------
-# WooCommerce Checkout
+# Checkout
 --------------------------------------------------------------*/
 @import "woocommerce/checkout";
 
 /*--------------------------------------------------------------
-# WooCommerce Cart
+# Cart
 --------------------------------------------------------------*/
 @import "woocommerce/cart";
 
 /*--------------------------------------------------------------
-# WooCommerce Widgets
+# Widgets
 --------------------------------------------------------------*/
 @import "woocommerce/widgets";
 
 /*--------------------------------------------------------------
-# WooCommerce Quickview
+# Quickview
 --------------------------------------------------------------*/
 @import "woocommerce/quickview";
