--- a/sass/woocommerce/_layout.scss
+++ b/sass/woocommerce/_layout.scss
@@ -1,8 +1,4 @@
-body.woocommerce.woocommerce-page {
-
-	.content-area {
-		width: 100%;	
-	}
+.woocommerce {
 
 	.site-main {
 		margin: 0;
@@ -13,82 +9,44 @@ body.woocommerce.woocommerce-page {
 		.content-area {
 			float: right;
 			margin: 0 0 0 (-$size__site-sidebar);
-			width: $size__site-main;
-
-			@at-root body.woocommerce.woocommerce-page.woocommerce-sidebar-right .content-area {
-				float: left;
-				margin: 0 (-$size__site-sidebar) 0 0;
-			}					
+			width: $size__site-main;			
 
 			@media (max-width: 768px) {
-				margin: 0 !important;
-				width: 100% !important;
+				margin: 0;
+				width: 100%;
 			}
 		}
 
 		.site-main {
 			margin: 0 0 0 $size__site-sidebar;
-
-			@at-root body.woocommerce.woocommerce-page.woocommerce-sidebar-right .site-main {
-				margin: 0 $size__site-sidebar 0 0;			
-			}			
-	
+			
 			@media (max-width: 768px) {
 				margin: 0 !important;
 			}
 	 	}
 	}
 
-	// No Sidebar page layout setting.
-	&.page-layout-no-sidebar .site-content {
-
-		.content-area {
-			float: none;
-			margin: 0;
-			width: 100%; 
-		}
-
-		.site-main {
-			margin: 0;
-		}
-	} 
-
-	// Full Width page layout setting.
-	&.page-layout-full-width .site-content {
-
-		#primary.content-area {
-			float: none;
-			margin: 0;
-			width: 100%; 
-		}
-
-		#main.site-main {
-			margin: 0;
-		}
-
-		.corp-container {
-			max-width: none;
-			padding: 0;  
-		}
-	}	
-
-	// Sidebar.
 	.widget-area {
 		float: left;
 		padding-right: 40px;
-		padding-left: 0;
-		width: $size__site-sidebar;	
-		
-		@at-root body.woocommerce.woocommerce-page.woocommerce-sidebar-right .widget-area {
+		padding-left: 0;			
+	}
+
+	&.woocommerce-sidebar-right {
+
+		.content-area {
 			float: left;
-			padding-left: 40px;
-			padding-right: 0;
-		}	
-					
-		@media (max-width: 768px) {
-			margin-top: 80px;	
-			padding: 0;		
-			width: 100%;
+			margin: 0 (-$size__site-sidebar) 0 0;
 		}
-	}				
+
+		.site-main {
+			margin: 0 $size__site-sidebar 0 0;	
+		}
+
+		.widget-area {
+			float: right;
+			padding-right: 0;
+			padding-left: 40px; 
+		}		
+	}			
 }
