--- a/woocommerce.css
+++ b/woocommerce.css
@@ -583,6 +583,9 @@ p.demo_store {
     .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li a {
       color: #adadad; }
 
+.woocommerce.single-product #content div.product #reviews .woocommerce-noreviews {
+  margin-bottom: 0; }
+
 .woocommerce.single-product #content div.product #reviews #comments .woocommerce-Reviews-title {
   font-size: 18px;
   margin: 30px 0 5px; }
@@ -600,6 +603,9 @@ p.demo_store {
     border-width: 0;
     margin-left: 95px;
     padding: 0; }
+    .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .star-rating {
+      float: none;
+      margin-bottom: 5px; }
     .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .comment-meta {
       color: #adadad; }
       .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .comment-meta .comment-author {
@@ -614,6 +620,7 @@ p.demo_store {
       font-size: 14px; }
 
 .woocommerce.single-product #content div.product #reviews #respond .comment-reply-title {
+  color: #2d2d2d;
   display: block;
   margin: 33px 0 37px; }
 
