Revert "Changelog update"
This reverts commit 1d5f539fbf6ec42b89348f51d49554be8f3ed3fd.

--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1678,3 +1678,5 @@ p.demo_store {
         margin-left: 10px; }
   .woocommerce #quick-view-container .product-content-wrapper .single_variation_wrap .woocommerce-variation-price {
     margin: 15px 0; }
+
+/*# sourceMappingURL=sass/maps/woocommerce.css.map */
