--- a/style.css
+++ b/style.css
@@ -764,8 +764,8 @@ a {
       float: none;
       line-height: 45px;
       position: absolute;
-      top: 0;
-      right: 0; }
+      right: 0;
+      top: 0; }
 
 /*--------------------------------------------------------------
 ## Mobile Menu
