--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -157,7 +157,7 @@
 
 				@media (max-width: 768px) {
 					float: none;
-					margin: 0 0 4em;
+					margin: 0;
 					width: 100% !important;
 				}
 			}
