Minor Jetpack sharing changes

--- a/sass/modules/_jetpack.scss
+++ b/sass/modules/_jetpack.scss
@@ -110,3 +110,20 @@
 		}
 	}
 }
+
+/*--------------------------------------------------------------
+## Sharing
+--------------------------------------------------------------*/
+.share-this {
+	font-size: 13px;
+}
+
+.single .sharedaddy .sd-content {
+	padding: 1em 0 1.5em;
+	text-align: center;
+	width: 100%;
+
+	ul {
+		display: inline-block;
+	}
+}
