--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -152,7 +152,7 @@
 				float: left;
 
 				&:last-of-type {
-					margin-right: 0 !important;
+					margin-right: 0;
 				}
 
 				@media (max-width: 768px) {
