WooCommerce cart page fixes

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -18,6 +18,11 @@
 @import "woocommerce/buttons";
 
 /*--------------------------------------------------------------
+# Tables
+--------------------------------------------------------------*/
+@import "woocommerce/tables";
+
+/*--------------------------------------------------------------
 # Archive
 --------------------------------------------------------------*/
 @import "woocommerce/archive";
