--- a/sass/woocommerce/_buttons.scss
+++ b/sass/woocommerce/_buttons.scss
@@ -23,6 +23,7 @@
 .woocommerce a.button,
 .woocommerce a.button.alt,
 .woocommerce.single-product .cart button,
+.woocommerce .actions .button,
 .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .place-order .button {
 	background-color: $color__primary-accent;
 	border: 1px solid $color__primary-accent;
